--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             background-color: #ffffff;
             margin: 0;
             padding: 0;
-            overflow: hidden;
+            overflow-y: auto; /* Permitir scroll vertical */
         }
         #header {
             display: flex;
